fixed portfolio text align

--- a/src/pages/Portfolio/style.css
+++ b/src/pages/Portfolio/style.css
@@ -2,7 +2,8 @@
     margin-left: 25px;
     margin-right: 25px;
     margin-top: 15px;
-    padding-bottom: 25px
+    padding-bottom: 25px;
+    text-align: center;
     /* margin-bottom: 35px; */
 
 }
